2009-06-23  Miguel de Dios <miguel.dedios@artica.es>

	* operation/incidents/incident.php: fix parameters to pass function
	pagination. 
	Fixes: #2805804
	
	
2009-06-23  Miguel de Dios <miguel.dedios@artica.es>

	* godmode/agentes/modificar_agente.php: add another "create agent" before
	the list for more usability
	
	
2009-06-23  Miguel de Dios <miguel.dedios@artica.es>

	* include/styles/menu.css: Fixed style for elements menu
	that it have large text.
	Fixes: #2808843

2009-06-22  Manuel Arostegui <marostegui@artica.es>

	* include/functions_filemanager.php: Fixed ugly warning, the 
	languanges path was incorrect.

2009-06-22  Miguel de Dios <miguel.dedios@artica.es>

	* godmode/admin_access_logs.php: Fix fall the table of logs to
	bottom page.
	Fixes: #2805812

2009-06-22  Miguel de Dios <miguel.dedios@artica.es>

	* Fix the error introduced by Miguel de Dios in 2009-06-18, The error
	was add repeated rows with language_code in DB.

2009-06-19 Jorge Gonzlaez  <jorgegonz@artica.es>

	* AUTHORS: Fixed typo.

2009-06-18  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_config.php: Fix save change language in setup.
	Fixes: #2777463

2009-06-10  Esteban Sanchez  <estebans@artica.es>

	* operation/events/events.php: Removed all events on select elements.
	Fixes #2797203.

2009-06-10  Esteban Sanchez  <estebans@artica.es>

	* include/functions_reporting.php: Return false if no data were found
	on get_agentmodule_sla(). Fixes #2777541

	* operation/reporting/reporting_viewer.php: Style correction.

2009-06-10  Esteban Sanchez  <estebans@artica.es>

	* godmode/modules/manage_network_templates_form.php: Applied
	Zdenek Janda's patch. Fixes #2802589

2009-06-10  Esteban Sanchez  <estebans@artica.es>

	* operation/agentes/networkmap.php: Avoids a warning when no nodes
	were found on generate_dot(). Shows a message when no nodes were
	found. Fixes #2786516. 

	* operation/menu.php: Changed label of network maps.
